# twitch_highway

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  cliff.toml
examples/chatbot/: .gitignore  Cargo.toml
examples/chatbot/src/: api.rs  eventsub.rs  main.rs
src/: base.rs  client.rs  error.rs  impl_endpoint.rs  lib.rs  macros.rs  request.rs  response.rs  serde_helpers.rs  serde_util.rs  test_url.rs  test_utils.rs  users.rs  utils.rs
src/ads/: mod.rs  request.rs  response.rs  types.rs
src/analytics/: builder.rs  mod.rs  request.rs  response.rs  types.rs
src/bits/: builder.rs  mod.rs  request.rs  response.rs  types.rs
src/ccls/: mod.rs  request.rs  response.rs  types.rs
src/channel_points/: builder.rs  mod.rs  request.rs  response.rs  types.rs
src/channels/: builder.rs  mod.rs  request.rs  response.rs  types.rs
src/charity/: builder.rs  mod.rs  response.rs  types.rs
src/chat/: badges.rs  builder.rs  emotes.rs  get_chat_setting.rs  get_chatters.rs  get_shared_chat_session.rs  mod.rs  request.rs  response.rs  send_chat_message.rs  types.rs
src/clips/: builder.rs  mod.rs  request.rs  response.rs  types.rs
src/conduits/: builder.rs  mod.rs  request.rs  response.rs  types.rs
src/entitlements/: builder.rs  mod.rs  request.rs  response.rs  types.rs
src/eventsub/: builder.rs  condition.rs  create.rs  delete.rs  get.rs  mod.rs  request.rs  response.rs  subscription.rs  subscription_types.rs  transport.rs  types.rs  webhook.rs
src/extensions/: builder.rs  mod.rs  request.rs  response.rs  types.rs
src/games/: builder.rs  mod.rs  request.rs  response.rs  types.rs
src/goals/: mod.rs  response.rs  types.rs
src/guest_star/: builder.rs  mod.rs  request.rs  response.rs  types.rs
src/hype_train/: builder.rs  mod.rs  response.rs  types.rs
src/moderation/: builder.rs  mod.rs  request.rs  response.rs  types.rs
src/polls/: builder.rs  mod.rs  request.rs  response.rs  types.rs
src/predictions/: builder.rs  mod.rs  request.rs  response.rs  types.rs
src/raid/: mod.rs  response.rs  types.rs
src/request/: empty_body.rs  endpoint_type.rs  mod.rs  no_content.rs  request_body.rs
src/schedule/: builder.rs  mod.rs  request.rs  response.rs  types.rs
src/search/: builder.rs  mod.rs  response.rs  types.rs
src/streams/: builder.rs  mod.rs  request.rs  response.rs  types.rs
src/subscriptions/: builder.rs  mod.rs  response.rs  types.rs
src/teams/: mod.rs  request.rs  response.rs  types.rs
src/test_utils/: mod.rs
src/types/: amount.rs  category.rs  choice.rs  constants.rs  cost.rs  date_range.rs  image.rs  mod.rs  new_types.rs  outcome.rs  pagination.rs  reward.rs  status.rs  subscription_types.rs  title.rs  top_contribution.rs  top_predictor.rs  transport.rs
src/users/: builder.rs  get_user.rs  mod.rs  request.rs  response.rs  types.rs
src/videos/: builder.rs  mod.rs  request.rs  response.rs  types.rs
src/whisper/: mod.rs  request.rs  types.rs
src/whispers/: mod.rs  request.rs
tests/: ads.rs  analytics.rs  badges.rs  bits.rs  ccls.rs  channel_points.rs  channels.rs  charity.rs  chat.rs  clips.rs  conduits.rs  emotes.rs  entitlements.rs  eventsub.rs  extensions.rs  games.rs  get_user.rs  goals.rs  guest_star.rs  hype_train.rs  main.rs  moderation.rs  polls.rs  predictions.rs  raid.rs  schedule.rs  search.rs  streams.rs  subscriptions.rs  teams.rs  test_token.json  twitch_cli.rs  users.rs  videos.rs  whisper.rs
tests/ads/: get_ad_schedule.rs  mock_server.rs  mod.rs  snooze_next_ad.rs  start_commercial.rs
tests/analytics/: get_extension_analytics.rs  get_game_analytics.rs  mock_server.rs  mod.rs
tests/bits/: get_bits_leaderboard.rs  get_cheermotes.rs  get_extension_transactions.rs  mock_server.rs  mod.rs
tests/ccls/: mod.rs
tests/channel_points/: create_custom_rewards.rs  delete_custom_rewards.rs  get_custom_reward_redemption.rs  get_custom_rewards.rs  mock_server.rs  mod.rs  update_custom_reward.rs  update_redemption_status.rs
tests/channels/: get_channel_editors.rs  get_channel_followers.rs  get_channel_info.rs  get_followed_channels.rs  mock_server.rs  mod.rs  modify_channel_info.rs
tests/charity/: get_charity_campaign.rs  get_charity_campaign_donations.rs  mock_server.rs  mod.rs
tests/chat/: channel_badge.rs  channel_emotes.rs  chat_write.rs  emote_sets.rs  get_chat_settings.rs  get_chatters.rs  get_shared_chat_session.rs  global_badge.rs  global_emotes.rs  mock_server.rs  mod.rs  send_a_shoutout.rs  (+5 more)
twitch_onthe/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
twitch_onthe/src/: ids.rs  lib.rs
twitch_onthe/src/eventsub/: condition.rs  mod.rs  status.rs  subscription.rs  subscription_types.rs
twitch_onthe/src/types/: choice.rs  image.rs  mod.rs  outcome.rs  reward.rs  top_contribution.rs  top_predictor.rs
twitch_tohell/: Cargo.toml
twitch_tohell/src/: lib.rs
twitch_tohell/src/events/: charity.rs  conduit.rs  entitlement.rs  extension.rs  goals.rs  mod.rs  moderator.rs  serde_helpers.rs  stream.rs  user.rs  whisper.rs
twitch_tohell/src/events/automod/: mod.rs  v1.rs  v2.rs
twitch_tohell/src/events/channels/: ads.rs  ban.rs  cheer.rs  follow.rs  guest_star.rs  mod.rs  polls.rs  prediction.rs  raid.rs  shared_chat.rs  subscribe.rs  subscription.rs  suspicious.rs  unban.rs  update.rs  vip.rs  warning.rs
twitch_tohell/src/events/channels/bits/: mod.rs
twitch_tohell/src/events/channels/moderate/: mod.rs  v1.rs  v2.rs
twitch_tohell/src/events/channels/points/: mod.rs  v1.rs  v2.rs
twitch_tohell/src/events/chat/: mod.rs
twitch_tohell/src/events/hype_train/: v1.rs  v2.rs
twitch_tohell/src/webhook/: error.rs  header_access.rs  mod.rs  types.rs  verification.rs
twitch_tohell/src/websocket/: client.rs  common.rs  messages.rs  mod.rs  scanner.rs
twitch_tohell/src/websocket/router/: endpoint.rs  fallback.rs  mod.rs  route.rs  service.rs
twitch_tohell/src/websocket/router/extract/: mod.rs  rejection.rs
twitch_tohell/src/websocket/router/handler/: boxed.rs  future.rs  mod.rs  service.rs
twitch_tohell/src/websocket/router/layer/: trace.rs
twitch_tohell/src/websocket/types/: message_type.rs  metadata.rs
(+202 files in other folders)
