[package]
name = "twitch_highway"
version = "0.4.1"
authors = ["m3id"]
edition = "2021"
description = "Twitch API"
documentation = "https://docs.rs/twitch_highway"
repository = "https://github.com/m3idnotfree/twitch_highway.git"
license = "MIT OR Apache-2.0"
keywords = ["api", "helix", "oauth", "streaming", "twitch"]
categories = ["api-bindings", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[test]]
name = "twitch-cli"
path = "tests/twitch_cli.rs"

[dependencies]
# webhook - HeaderAccess trait implementation
actix-http = { version = "3.12.0", optional = true }
asknothingx2-util = { version = "0.4.1", features = ["api", "oauth", "serde"] }
# webhook - IntoResponse for WebhookError
axum-core = { version = "0.5.6", default-features = false, optional = true }
chrono = { version = "0.4.44", features = ["serde"] }
chrono-tz = "0.10.4"
# websocket
futures-util = { version = "0.3.32", optional = true }
# webhook - signature verification
hex = { version = "0.4.3", optional = true }
hmac = { version = "0.12.1", optional = true }
http = { version = "1.4.0", optional = true }
http-serde = "2.1.1"
itoa = "1.0.17"
# websocket - router
pin-project-lite = { version = "0.2.17", optional = true }
rand = { version = "0.10.0", optional = true }
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.17.0"
sha2 = { version = "0.10.9", optional = true }
subtle = { version = "2.6.1", optional = true }
thiserror = { version = "2.0.18", optional = true }
# websocket - client
tokio = { version = "1.50.0", features = [
  "net",
  "rt-multi-thread",
  "sync",
  "time"
], optional = true }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"], optional = true }
tower = { version = "0.5.3", features = ["limit", "util"], optional = true }
tracing = { version = "0.1.44", optional = true }
twitch_oauth_token = "4.0.1"
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
actix-web = "4.13.0"
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws"] }
pin-project-lite = "0.2.17"
rand = "0.10.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
twitch_oauth_token = { version = "4.0.1", features = ["oneshot", "test"] }
wiremock = "0.6.5"

[features]
webhook-actix = ["actix-http", "hex", "hmac", "rand", "sha2", "subtle"]
webhook-axum = ["axum-core", "hex", "hmac", "http", "rand", "sha2", "subtle"]
websocket = [
  "dep:tower",
  "futures-util",
  "pin-project-lite",
  "thiserror",
  "tokio",
  "tokio-tungstenite",
  "tracing",
]
