[package]
name = "twitch_highway"
version = "0.5.2"
authors = ["m3id"]
edition.workspace = true
description = "Twitch API"
documentation = "https://docs.rs/twitch_highway"
repository = "https://github.com/m3idnotfree/twitch_highway"
license.workspace = true
rust-version = "1.88"
keywords = ["api", "helix", "oauth", "streaming", "twitch"]
categories = ["api-bindings", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [".", "twitch_onthe", "twitch_tohell"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
asknothingx2-util = "0.5.0"
chrono = "0.4.44"
serde = "1.0.228"
serde_json = "1.0.149"
twitch_onthe = { path = "twitch_onthe", version = "=0.1.0" }
twitch_tohell = { path = "twitch_tohell", version = "=0.1.1" }
url = "2.5.8"

[[test]]
name = "twitch-cli"
path = "tests/twitch_cli.rs"

[[test]]
name = "ads"
path = "tests/ads.rs"

[[test]]
name = "analytics"
path = "tests/analytics.rs"

[[test]]
name = "bits"
path = "tests/bits.rs"

[[test]]
name = "channel-points"
path = "tests/channel_points.rs"

[[test]]
name = "channels"
path = "tests/channels.rs"

[[test]]
name = "charity"
path = "tests/charity.rs"

[[test]]
name = "chat"
path = "tests/chat.rs"

[[test]]
name = "clips"
path = "tests/clips.rs"

[[test]]
name = "conduits"
path = "tests/conduits.rs"

[[test]]
name = "entitlements"
path = "tests/entitlements.rs"

[[test]]
name = "eventsub"
path = "tests/eventsub.rs"

[[test]]
name = "extensions"
path = "tests/extensions.rs"

[[test]]
name = "games"
path = "tests/games.rs"

[[test]]
name = "goals"
path = "tests/goals.rs"

[[test]]
name = "guest-star"
path = "tests/guest_star.rs"

[[test]]
name = "hype-train"
path = "tests/hype_train.rs"

[[test]]
name = "moderation"
path = "tests/moderation.rs"

[[test]]
name = "polls"
path = "tests/polls.rs"

[[test]]
name = "predictions"
path = "tests/predictions.rs"

[[test]]
name = "raid"
path = "tests/raid.rs"

[[test]]
name = "schedule"
path = "tests/schedule.rs"

[[test]]
name = "search"
path = "tests/search.rs"

[[test]]
name = "streams"
path = "tests/streams.rs"

[[test]]
name = "subscriptions"
path = "tests/subscriptions.rs"

[[test]]
name = "teams"
path = "tests/teams.rs"

[[test]]
name = "users"
path = "tests/users.rs"

[[test]]
name = "videos"
path = "tests/videos.rs"

[[test]]
name = "whisper"
path = "tests/whisper.rs"

[dependencies]
asknothingx2-util = { workspace = true, features = ["api", "oauth", "serde"] }
chrono = { workspace = true, features = ["serde"] }
chrono-tz = "0.10.4"
reqwest = "0.13.2"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_with = "3.17.0"
twitch_oauth_token = "4.3.0"
twitch_onthe.workspace = true
twitch_tohell = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
actix-web = "4.13.0"
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws"] }
pin-project-lite = "0.2.17"
rand = "0.10.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
twitch_oauth_token = { version = "4.3.0", features = ["oneshot", "test"] }
wiremock = "0.6.5"

[features]
webhook-actix = ["twitch_tohell/webhook-actix"]
webhook-axum = ["twitch_tohell/webhook-axum"]
websocket = ["twitch_tohell/websocket"]
