[package]
name = "twitch_tohell"
version = "0.1.1"
edition.workspace = true
rust-version = "1.88"
description = "Twitch EventSub webhook and WebSocket support"
documentation = "https://docs.rs/twitch_tohell"
repository = "https://github.com/m3idnotfree/twitch_highway"
license.workspace = true
keywords = ["eventsub", "twitch", "webhook", "websocket"]
categories = ["api-bindings", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
actix-http = { version = "3.12.0", optional = true }
asknothingx2-util = { workspace = true, features = ["serde"] }
axum-core = { version = "0.5.6", default-features = false, optional = true }
chrono = { workspace = true, features = ["serde"] }
futures-util = { version = "0.3.32", optional = true }
hex = { version = "0.4.3", optional = true }
hmac = { version = "0.12.1", optional = true }
http = { version = "1.4.0", optional = true }
liver-shot = { version = "1.1.0", optional = true }
pin-project-lite = { version = "0.2.17", optional = true }
rand = { version = "0.10.0", optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = { version = "0.10.9", optional = true }
subtle = { version = "2.6.1", optional = true }
thiserror = { version = "2.0.18", optional = true }
tokio = { version = "1.50.0", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time"
], optional = true }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"], optional = true }
tower = { version = "0.5.3", features = ["limit", "util"], optional = true }
tracing = { version = "0.1.44", optional = true }
twitch_onthe.workspace = true
url = { workspace = true }

[features]
webhook-actix = ["actix-http", "hex", "hmac", "rand", "sha2", "subtle"]
webhook-axum = ["axum-core", "hex", "hmac", "http", "rand", "sha2", "subtle"]
websocket = [
  "futures-util",
  "liver-shot",
  "pin-project-lite",
  "thiserror",
  "tokio",
  "tokio-tungstenite",
  "tower",
  "tracing",
]
