[package]
name = "chatbot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8" }
dotenvy = "0.15.7"
serde = "1.0.228"
tokio = { version = "1.49.0", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync"
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
twitch_highway = { path = "../..", features = [
  "chat",
  "eventsub",
  "users",
  "websocket"
] }
twitch_oauth_token = "3.0.1"
